Changes to allow for external recording message

--- a/bigbluebutton-client/src/org/bigbluebutton/main/views/RecordButton.mxml
+++ b/bigbluebutton-client/src/org/bigbluebutton/main/views/RecordButton.mxml
@@ -99,6 +99,10 @@ with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
 					return;
 				}
 
+				/* Added by Akshay */
+
+				ExternalInterface.call("BBBRecordRequest");
+
 				var event:BBBEvent = new BBBEvent(BBBEvent.CHANGE_RECORDING_STATUS);
 				event.payload.remote = false;
 				event.payload.recording = recordingFlag;
